--- a/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
@@ -15,7 +15,7 @@
 	prefWidth="604.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
 	fx:controller="org.pyt.app.beans.banco.BancoCRUBean">
 	<bottom>
-		<FlowPane alignment="CENTER" fx:id="sectionButtons" columnHalignment="CENTER" prefHeight="34.0" prefWidth="578.0" BorderPane.alignment="CENTER"/>
+		<HBox alignment="CENTER" fx:id="sectionButtons" prefHeight="34.0" prefWidth="578.0" BorderPane.alignment="CENTER"/>
 	</bottom>
 	<center>
 		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
@@ -65,7 +65,7 @@
 		</GridPane>
 	</center>
 	<top>
-		<FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+		<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
 			<children>
 				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
 					text="Banco" textAlignment="CENTER">
@@ -77,6 +77,6 @@
 			<BorderPane.margin>
 				<Insets bottom="5.0" top="5.0" />
 			</BorderPane.margin>
-		</FlowPane>
+		</HBox>
 	</top>
 </BorderPane>
