--- a/pyt-contabilidad/pyt-app/src/main/resources/view/banco/listBanco.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/banco/listBanco.fxml
@@ -15,20 +15,7 @@
 	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
 	fx:controller="org.pyt.app.beans.banco.BancoBean" >
 	<bottom>
-		<FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
-			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Agregar" />
-				<Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="Modificar" visible="false">
-					<FlowPane.margin>
-						<Insets left="10.0" right="10.0" />
-					</FlowPane.margin>
-				</Button>
-				<Button mnemonicParsing="false" onAction="#del" text="Eliminar" />
-			</children>
-			<padding>
-				<Insets bottom="5.0" top="5.0" />
-			</padding>
-		</FlowPane>
+		<FlowPane fx:id="panel" alignment="CENTER" BorderPane.alignment="CENTER"/>
 	</bottom>
 	<center>
 		<BorderPane prefHeight="200.0" prefWidth="200.0">
@@ -55,26 +42,7 @@
 			</bottom>
 			<center>
 				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="554.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
-					<columns>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="95.0" text="Nombre">
-							<cellValueFactory>
-								<PropertyValueFactory property="nombre" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="140.0" text="Descripcion">
-							<cellValueFactory>
-								<PropertyValueFactory property="descripcion" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn fx:id="tipoBancos" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Tipo de Banco"/>
-						<TableColumn fx:id="tipoCuentas" prefWidth="120.0" text="Tipo de Cuenta"/>
-						<TableColumn fx:id="estados" prefWidth="80.0" text="Estado" />
-					</columns>
-					<BorderPane.margin>
-						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-					</BorderPane.margin>
-				</TableView>
+					minWidth="-Infinity" prefWidth="554.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER"/>
 			</center>
 		</BorderPane>
 	</center>
