--- a/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/actividadIca.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/actividadIca.fxml
@@ -11,54 +11,10 @@
 
 <BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.actividadIca.ActividadIcaCRUBean">
   <bottom>
-    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
-      <children>
-        <Button mnemonicParsing="false" onAction="#add" text="Guardar" />
-        <Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
-          <FlowPane.margin>
-            <Insets left="10.0" />
-          </FlowPane.margin>
-        </Button>
-      </children>
-      <BorderPane.margin>
-        <Insets bottom="5.0" top="5.0" />
-      </BorderPane.margin>
-    </FlowPane>
+    <FlowPane fx:id="buttons" alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
-    <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="469.0" BorderPane.alignment="CENTER">
-      <children>
-        <Label alignment="CENTER" prefHeight="33.0" prefWidth="88.0" text="Código" />
-        <Label fx:id="codigo" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="163.0" textAlignment="CENTER" GridPane.columnIndex="1" />
-        <TextField fx:id="tarifa" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-        <Label alignment="CENTER" prefHeight="27.0" prefWidth="90.0" text="Tarifa" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="76.0" text="Base" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField id="orden" fx:id="base" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <TextField fx:id="descripcion" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-        <Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Descripción" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-        <Label alignment="CENTER" prefHeight="29.0" prefWidth="70.0" text="Nombre" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Código Ica" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-        <TextField fx:id="codigoIca" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-      </children>
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="79.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="152.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="87.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="151.0" />
-      </columnConstraints>
-      <padding>
-        <Insets bottom="10.0" />
-      </padding>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-      <BorderPane.margin>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </BorderPane.margin>
-    </GridPane>
+    <GridPane fx:id="fields" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="469.0" BorderPane.alignment="CENTER"/>
   </center>
   <top>
     <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
