--- a/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/listActividadIca.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/listActividadIca.fxml
@@ -12,20 +12,7 @@
 
 <BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.actividadIca.ActividadIcaBean">
   <bottom>
-    <FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
-      <children>
-        <Button mnemonicParsing="false" onAction="#add" text="Agregar" />
-        <Button fx:id="btnMod" mnemonicParsing="false" onAction="#set" text="Modificar" visible="false">
-          <FlowPane.margin>
-            <Insets left="10.0" right="10.0" />
-          </FlowPane.margin>
-        </Button>
-        <Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="Eliminar" visible="false" />
-      </children>
-      <padding>
-        <Insets bottom="5.0" top="5.0" />
-      </padding>
-    </FlowPane>
+    <FlowPane fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
     <BorderPane prefHeight="200.0" prefWidth="200.0">
@@ -49,91 +36,11 @@
         </GridPane>
       </bottom>
       <center>
-        <TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="406.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
-          <columns>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="89.0" text="Codigo">
-              <cellValueFactory>
-                <PropertyValueFactory property="codigoIca" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="89.0" text="Nombre">
-              <cellValueFactory>
-                <PropertyValueFactory property="nombre" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="187.0" text="Descripcion">
-              <cellValueFactory>
-                <PropertyValueFactory property="descripcion" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="54.0" text="Base">
-              <cellValueFactory>
-                <PropertyValueFactory property="base" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Tarifa">
-              <cellValueFactory>
-                <PropertyValueFactory property="tarifa" />
-              </cellValueFactory>
-            </TableColumn>
-          </columns>
-          <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-          </BorderPane.margin>
-        </TableView>
+        <TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="406.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER"/>
       </center>
     </BorderPane>
   </center>
   <top>
-    <GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
-      <children>
-        <Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Nombre" textAlignment="LEFT" wrapText="true" GridPane.rowIndex="1">
-          <GridPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-          </GridPane.margin>
-        </Label>
-        <Label prefHeight="27.0" prefWidth="96.0" text="Descripción" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
-          <GridPane.margin>
-            <Insets bottom="5.0" left="10.0" top="5.0" />
-          </GridPane.margin>
-        </Label>
-        <TextField fx:id="nombre" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-          <GridPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-          </GridPane.margin>
-        </TextField>
-        <TextField fx:id="descripcion" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-          <GridPane.margin>
-            <Insets bottom="5.0" right="5.0" top="5.0" />
-          </GridPane.margin>
-        </TextField>
-        <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Listado de Actividad Ica" textAlignment="CENTER" GridPane.columnSpan="4">
-          <font>
-            <Font name="System Bold Italic" size="18.0" />
-          </font>
-        </Label>
-        <Button mnemonicParsing="false" onAction="#search" text="Buscar" GridPane.columnIndex="2" GridPane.rowIndex="2">
-          <GridPane.margin>
-            <Insets bottom="5.0" left="10.0" top="5.0" />
-          </GridPane.margin>
-        </Button>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Código Ica" wrapText="false" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField fx:id="codigoIca" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      </children>
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="141.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="96.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="172.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-      <BorderPane.margin>
-        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-      </BorderPane.margin>
-    </GridPane>
+    <GridPane fx:id="filter" cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER"/>
   </top>
 </BorderPane>
